--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -59,25 +59,25 @@ li {
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 0.05rem;
+  height: 0.05rem;
 }
 
 ::-webkit-scrollbar-track-piece {
   background-color: rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
+  -webkit-border-radius: 0.06rem;
 }
 
 ::-webkit-scrollbar-thumb:vertical {
-  height: 5px;
+  height: 0.05rem;
   background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
+  -webkit-border-radius: 0.06rem;
 }
 
 ::-webkit-scrollbar-thumb:horizontal {
-  width: 5px;
+  width: 0.05rem;
   background-color: rgba(125, 125, 125, 0.7);
-  -webkit-border-radius: 6px;
+  -webkit-border-radius: 0.06rem;
 }
 
 html, body {
@@ -89,6 +89,10 @@ body {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   margin: 0;
   padding: 0;
-  font-size: 16px;
+  font-size: 0.16rem;
   background: #FFF;
 }
+.left-margin{
+  margin-left: 0.36rem;
+}
+
