--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -58,6 +58,10 @@ li {
   list-style: none;
 }
 
+input,textarea,select {
+  outline: none;
+}
+
 ::-webkit-scrollbar {
   width: 0.05rem;
   height: 0.05rem;
