--- a/src/assets/mask.css
+++ b/src/assets/mask.css
@@ -1,16 +1,17 @@
 .mask {
   z-index: 999;
   width: 100%;
-  height: 100%;
   position: fixed;
   top: 0;
+  left: 0;
+  height: 100%;
   background-color: rgba(1, 1, 1, 0.5);
+  overflow: hidden;
 }
 
 .wraps {
   width: 100%;
   background-color: #fff;
-  height: 100%;
 }
 
 .res-title {
