--- a/src/assets/mask.css
+++ b/src/assets/mask.css
@@ -14,6 +14,11 @@
   background-color: #fff;
 }
 
+.p_bottom{
+  position: absolute;
+  bottom: 0;
+}
+
 .res-title {
   display: flex;
   font-size: 0.3rem;
