--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,1 +1,102 @@
-/* pages/index/index.wxss */
+.select-wrap {
+    display: flex;
+    margin-left: 37rpx;
+    margin-top: 22rpx;
+    margin-bottom: 22rpx;
+}
+.section_hot {
+    width: 260rpx;
+    height: 50rpx;
+    border-radius:8rpx;
+    box-shadow:0px 0px 21rpx rgba(198,160,86, 0.2);
+    border: 1rpx solid #C6A056;
+    font-size:24rpx;
+    font-family:PingFangSC-Regular;
+    color: #C6A056;
+    position: relative;
+}
+.section_hot picker {
+    width: 100%;
+    height: 100%;
+}
+.section_hot .picker {
+    line-height:50rpx;
+    margin-left: 15rpx;
+}
+.section_hot_img {
+    width: 20rpx;
+    height: 11rpx;
+    position: absolute;
+    right: 14rpx;
+    top: 20rpx;
+}
+.select-search-wrap {
+    margin-left: 40rpx;
+    height: 50rpx;
+    padding-left: 20rpx;
+    padding-right: 35rpx;
+}
+.select-search {
+    width: 32rpx;
+    height: 32rpx;
+    margin-top: 10rpx;
+}
+.select-left {
+    margin-left: 65rpx;
+}
+.banner {
+    width: 750rpx;
+    height: 341rpx;
+}
+.banner-img {
+    width: 750rpx;
+    height: 100%;
+}
+.advertising {
+    width: 750rpx;
+    height: 114rpx;
+    margin-top: 6rpx;
+    /*margin-bottom: 8rpx;*/
+    background-color: #bfa;
+}
+.list {
+    display: flex;
+    /*height: 162rpx;*/
+    margin: 0 34rpx 0 34rpx;
+    padding: 23rpx 4rpx 23rpx 0;
+    border-bottom: 1rpx solid #EFEFEF;
+}
+.list image {
+    width: 220rpx;
+    height: 116rpx;
+    margin-right: 21rpx;
+}
+.list-right {
+    width: 436rpx;
+}
+
+.list-right-top {
+    line-height: 40rpx;
+    color:rgba(51,51,51,1);
+    font-size: 30rpx;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+-webkit-box-orient: vertical;
+}
+.list-right-bottom {
+    color: #8E8D8D;
+    font-size: 24rpx;
+    margin-top: 10rpx;
+    text-align: right;
+}
+.look-more {
+    font-size:28rpx;
+    color:rgba(157,156,156,1);
+    line-height:26rpx;
+    text-align: center;
+    width: 100%;
+    margin-top: 28rpx;
+    margin-bottom: 26rpx;
+}
