--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,2 +1,20 @@
-<!--pages/index/index.wxml-->
-<text>pages/index/index.wxml</text>
+<view class="wrap-mine">
+    <view class="avatar_wrap">
+        <image class="avatar" src="../../images/pageImg/default_avatar.png"></image>
+    </view>
+    <view class="login">未登录，点击登录</view>
+    <view class="mine-list">
+        <view class="mine-list-left">
+            <image src="../../images/pageImg/share.png"></image>
+            <view>分享小程序</view>
+        </view>
+        <image class="mine-list-img" src="../../images/pageImg/arrows.png"></image>
+    </view>
+    <view class="mine-list">
+        <view class="mine-list-left">
+            <image src="../../images/pageImg/feedback.png"></image>
+            <view>用户反馈</view>
+        </view>
+        <image class="mine-list-img" src="../../images/pageImg/arrows.png"></image>
+    </view>
+</view>
