--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,1 +1,56 @@
-/* pages/index/index.wxss */
+.wrap-mine {
+    background: url("http://s2.mogucdn.com/mlcdn/c45406/170329_407g0k6lce0b3h78ddjg9dd39eh33_2400x800.jpg") no-repeat;
+    background-size: 750rpx 207rpx;
+    /*background-color: #bfa;*/
+    width: 100%;
+    height: 500rpx;
+}
+.avatar_wrap {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    padding-top: 103rpx;
+}
+
+.avatar {
+    width: 204rpx;
+    height: 204rpx;
+    border-radius: 102rpx;
+}
+.login {
+    width: 273rpx;
+    height: 74rpx;
+    line-height: 74rpx;
+    font-size: 28rpx;
+    text-align: center;
+    border-radius:37rpx;
+    color: #C6A056;
+    border: 1rpx solid #C6A056;
+    margin:39rpx auto 126rpx;
+}
+.mine-list {
+    display: flex;
+    justify-content: space-between;
+    font-size:28rpx;
+    line-height: 106rpx;
+    border-bottom: 1rpx solid #E9E8E8;
+    vertical-align: middle;
+}
+.mine-list-left {
+    display: flex;
+}
+.mine-list-left image {
+    width: 34rpx;
+    height: 34rpx;
+    margin-left: 36rpx;
+    margin-right: 24rpx;
+    margin-top: 35rpx;
+}
+.mine-list-img {
+    width: 18rpx;
+    height: 32rpx;
+    margin-top: 37rpx;
+    margin-right: 36rpx;
+
+}
