--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -8,7 +8,7 @@
     width: 260rpx;
     height: 50rpx;
     border-radius:8rpx;
-    box-shadow:0px 0px 21rpx rgba(198,160,86, 0.2);
+    -boxshadow:0px 0px 21rpx rgba(198,160,86, 0.2);
     border: 1rpx solid #C6A056;
     font-size:24rpx;
     font-family:PingFangSC-Regular;
@@ -83,7 +83,7 @@
     text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
--webkit-box-orient: vertical;
+    -webkit-box-orient: vertical;
 }
 .list-right-bottom {
     color: #8E8D8D;
