--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -27,7 +27,12 @@
     border-radius:37rpx;
     color: #C6A056;
     border: 1rpx solid #C6A056;
-    margin:39rpx auto 126rpx;
+    margin:39rpx auto 125rpx;
+}
+.border {
+    width: 100%;
+    height: 2rpx;
+    background-color: #E9E8E8;
 }
 .mine-list {
     display: flex;
@@ -53,4 +58,11 @@
     margin-top: 37rpx;
     margin-right: 36rpx;
 
+}
+.mask {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    background:rgba(0,0,0,0.5);
 }
