--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,8 +1,9 @@
 <view class="wrap-mine">
     <view class="avatar_wrap">
-        <image class="avatar" src="../../images/pageImg/default_avatar.png"></image>
+        <image class="avatar" src="{{avatarUrl}}"></image>
     </view>
-    <view class="login">未登录，点击登录</view>
+    <!--<view class="login">未登录，点击登录</view>-->
+    <view class="login1">{{userInfo.nickName}}</view>
     <view class="border"></view>
     <view class="mine-list">
         <view class="mine-list-left">
@@ -18,7 +19,68 @@
         </view>
         <image class="mine-list-img" src="../../images/pageImg/arrows.png"></image>
     </view>
-    <view class="mask">
-        <view></view>
+    <view class="mask" catchtap="" wx:if="{{}}">
+        <block wx:if="{{}}"> <!--选择登录方式-->
+            <view class="mask-content" catchtap="">
+                <view class="mask-login">
+                    <view>登录/注册</view>
+                    <image class="close" src="../../images/pageImg/close.png"></image>
+                </view>
+                <view class="mobile-login">
+                    <image src="../../images/pageImg/iphone.png"></image>
+                    <view>手机注册/登录</view>
+                </view>
+                <button
+                        class="weixin-login recet-default"
+                        open-type="getUserInfo"
+                        bindgetuserinfo="getUserInfo"
+                        hover-class
+                >
+                    <image src="../../images/pageImg/iphone.png"></image>
+                    <view>微信快速登录</view>
+                </button>
+                <view style="height: 82rpx"></view>
+            </view>
+        </block>
+        <block wx:if="{{}}"><!--登录-->
+            <view class="mask-content mask-content-login" catchtap="">
+                <view class="mask-login">
+                    <view>登录</view>
+                    <image class="close" src="../../images/pageImg/close.png"></image>
+                </view>
+                    <view class="user-login-iphone user-login">
+                        <image src="../../images/pageImg/iphone.png"></image>
+                        <input type="number" placeholder="请输入手机号码"/>
+                    </view>
+                    <view class="user-login-iphone user-password">
+                        <image style="height: 30rpx;width: 26rpx;margin-right: 31rpx" src="../../images/pageImg/password.png"></image>
+                        <input type="number" placeholder="请输入密码"/>
+                    </view>
+                    <view class="go-login">我要登录</view>
+                    <view class="go-login-bottom">还未注册，点击注册</view>
+            </view>
+        </block>
+        <block wx:if="{{}}"><!--注册-->
+            <view class="mask-content mask-content-login" catchtap="">
+                <view class="mask-login">
+                    <view>注册</view>
+                    <image class="close" src="../../images/pageImg/close.png"></image>
+                </view>
+                <view class="user-login-iphone user-login">
+                    <image src="../../images/pageImg/iphone.png"></image>
+                    <input type="number" placeholder="请输入手机号码"/>
+                </view>
+                <view class="user-login-iphone user-password">
+                    <image style="height: 30rpx;width: 26rpx;margin-right: 31rpx" src="../../images/pageImg/password.png"></image>
+                    <input type="number" placeholder="请输入密码"/>
+                </view>
+                <view class="user-login-iphone user-password">
+                    <image style="height: 30rpx;width: 26rpx;margin-right: 31rpx" src="../../images/pageImg/password.png"></image>
+                    <input type="number" placeholder="请确认密码"/>
+                </view>
+                <view class="go-login">立即注册</view>
+                <view class="go-login-bottom">已注册，点击登录</view>
+            </view>
+        </block>
     </view>
 </view>
