--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,38 +1,49 @@
 <block>
     <view class="select-wrap wraps">
         <view class="section_hot">
-            <picker class="" bindchange="hotSelect" range="{{array}}">
+            <picker class="" bindchange="hotSelect" range="{{hotList}}">
                 <view class="picker">
                     {{valHot}}
                 </view>
             </picker>
             <image wx:if="{{!indexHot}}" class="section_hot_img" src="../../images/pageImg/select.png"></image>
         </view>
-        <view class="section_hot select-left">
-            <picker class="" bindchange="hotSelect select-left" range="{{array}}">
-                <view class="picker">
-                    {{valHot}}
+        <view class="section_hot select-left" wx:if="{{valHotToList.length}}">
+            <picker class="" bindchange="hotSelectTo" range="{{valHotToList}}">
+                <view class="picker" wx:if="{{valHotTo}}">
+                    {{valHotTo}}
+                </view>
+                <view class="picker" wx:else>
+                    请选择
                 </view>
             </picker>
-            <image wx:if="{{!indexHot}}" class="section_hot_img" src="../../images/pageImg/select.png"></image>
+            <image wx:if="{{!valHotTo}}" class="section_hot_img" src="../../images/pageImg/select.png"></image>
         </view>
+        <view wx:if="{{!valHotToList.length}}" style="width: 350rpx"></view>
         <view class="select-search-wrap" bindtap="goSearch">
             <image class="select-search" src="../../images/pageImg/search.png"></image>
         </view>
     </view>
     <swiper class="banner" autoplay="true" circular="true">
-        <swiper-item>
-            <image class="banner-img" src="http://s2.mogucdn.com/mlcdn/c45406/170329_407g0k6lce0b3h78ddjg9dd39eh33_2400x800.jpg"></image>
+        <swiper-item wx:for="{{dataSet.banner}}">
+            <image class="banner-img" src="{{item.imgIndex}}"></image>
         </swiper-item>
-        <swiper-item>
+        <!--<swiper-item>
             <image class="banner-img" mode="widthFix" src="https://weixin.566.com/BizImage/CircleBgImage/201806/15/d58a_47de4ee4_47de4ee4.jpg"></image>
         </swiper-item>
         <swiper-item>
             <image class="banner-img" mode="widthFix" src="../../images/pageImg/11111.png"></image>
-        </swiper-item>
+        </swiper-item>-->
     </swiper>
     <image class="advertising"src=""></image>
-    <view class="list" bindtap="goToDetail">
+    <view class="list" wx:for="{{dataSet.MemorialMoney}}" wx:key="{{index}}" bindtap="goToDetail">
+        <image src="https://www.chqbh.com/qbh/uploadDownload/downloadImage.do?fileUrl={{item.url1}}"></image>
+        <view class="list-right">
+            <view class="list-right-top">{{item.tiele}}</view>
+            <view class="list-right-bottom">{{item.strTime}}</view>
+        </view>
+    </view>
+    <!--<view class="list">
         <image src="../../images/pageImg/money.png"></image>
         <view class="list-right">
             <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
@@ -66,13 +77,6 @@
             <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
             <view class="list-right-bottom">2018-06-19</view>
         </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
+    </view>-->
     <view class="look-more">查看更多</view>
 </block>
