--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -65,6 +65,9 @@
     color: #C6A056;
     border-top: 1rpx solid #EEEEEE;
     border-right: 1rpx solid #EEEEEE;
+    overflow: hidden;
+    text-overflow:ellipsis;
+    white-space: nowrap;
 }
 .bottom {
     border-bottom: 1rpx solid #EEEEEE;
