--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -25,7 +25,7 @@
         </view>
     </view>
     <swiper class="banner" autoplay="true" circular="true">
-        <swiper-item wx:for="{{dataSet.banner}}">
+        <swiper-item wx:for="{{dataSet.banner}}" wx:key="{{index}}">
             <image class="banner-img" src="{{item.imgIndex}}"></image>
         </swiper-item>
         <!--<swiper-item>
@@ -36,47 +36,17 @@
         </swiper-item>-->
     </swiper>
     <image class="advertising"src=""></image>
-    <view class="list" wx:for="{{dataSet.MemorialMoney}}" wx:key="{{index}}" bindtap="goToDetail">
+    <view class="list" wx:for="{{dataSet.MemorialMoney}}" wx:key="{{index}}" bindtap="goToDetailsPage" data-money-code="{{item.moneyCode}}">
         <image src="https://www.chqbh.com/qbh/uploadDownload/downloadImage.do?fileUrl={{item.url1}}"></image>
         <view class="list-right">
             <view class="list-right-top">{{item.tiele}}</view>
             <view class="list-right-bottom">{{item.strTime}}</view>
         </view>
     </view>
-    <!--<view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
+    <block>
+        <view wx:if="{{false}}" class="loading-wrap">
+            <image class="loading" src="../../images/pageImg/loading.png"></image>
         </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>-->
-    <view class="look-more">查看更多</view>
+        <view class="look-more" bindtap="goToDetail">查看更多</view>
+    </block>
 </block>
