--- a/pages/specialExhibition/specialExhibition.wxml
+++ b/pages/specialExhibition/specialExhibition.wxml
@@ -1,39 +1,11 @@
 <view>
     <image class="banner" src="http://s2.mogucdn.com/mlcdn/c45406/170329_407g0k6lce0b3h78ddjg9dd39eh33_2400x800.jpg"></image>
     <view style="height: 8rpx"></view>
-    <view class="list" bindtap="goToDetailsPage">
-        <image src="../../images/pageImg/money.png"></image>
+    <view class="list" wx:for="{{list}}" wx:key="{{index}}" bindtap="goToDetailsPage" data-money-code="{{item.moneyCode}}">
+        <image src="https://www.chqbh.com/qbh/uploadDownload/downloadImage.do?fileUrl={{item.url1}}"></image>
         <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
-        </view>
-    </view>
-    <view class="list">
-        <image src="../../images/pageImg/money.png"></image>
-        <view class="list-right">
-            <view class="list-right-top">贵金属纪念币知识介绍贵金属纪念币金属纪念币</view>
-            <view class="list-right-bottom">2018-06-19</view>
+            <view class="list-right-top">{{item.tiele}}</view>
+            <view class="list-right-bottom">{{item.strTime}}</view>
         </view>
     </view>
     <view class="look-more">查看更多</view>
