--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -46,12 +46,13 @@
             <text style="color: #C6A056;">介绍: </text>{{obj.moneyIntroduce}}
         </view>
         <view class="footer">
-            <view class="give-like flex" bindtap="clickGood">
-                <image class="footer-img1" src="../../images/pageImg/give-like.png"></image>
-                <view>64</view>
+            <view class="give-like flex {{isLike? 'is_like':''}}" bindtap="clickGood">
+                <span class="iconfont icon-dianzan"></span>
+                <view>{{moneyLike}}</view>
             </view>
             <button open-type="share" class="flex share">
-                <image class="footer-img2" src="../../images/pageImg/share.png"></image>
+                <!--<image class="footer-img2" src="../../images/pageImg/share.png"></image>-->
+                <span class="iconfont icon-fenxiang"></span>
                 <view>分享小程序</view>
             </button>
             <view class="flex friends-circle"bindtap="btnClick">
@@ -65,6 +66,6 @@
         <view>返回主页</view>
     </view>
     <view class="canvas-img">
-        <canvas canvas-id="canvasShare" style="width: 100%; height: 100%"></canvas>
+        <canvas canvas-id="canvasShare" style="width: 100%; height: 1206rpx"></canvas>
     </view>
 </view>
