--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -14,13 +14,13 @@
         </view>
         <image class="mine-list-img" src="../../images/pageImg/arrows.png"></image>
     </button>
-    <view class="mine-list">
+    <button open-type="contact" class="mine-list">
         <view class="mine-list-left">
             <image src="../../images/pageImg/feedback.png"></image>
             <view>用户反馈</view>
         </view>
         <image class="mine-list-img" src="../../images/pageImg/arrows.png"></image>
-    </view>
+    </button>
     <view class="mask" touchstart="" wx:if="{{openMask}}">
         <block wx:if="{{isLoginSelectMask}}"> <!--选择登录方式-->
             <view class="mask-content" touchstart="">
