--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -68,9 +68,23 @@ page {
     color: #C6A056;
     border-top: 1rpx solid #EEEEEE;
     border-right: 1rpx solid #EEEEEE;
-    overflow: hidden;
+    /*display: inline-block;
+    vertical-align: middle;*/
+    /*overflow: hidden;
     text-overflow:ellipsis;
-    white-space: nowrap;
+    white-space: nowrap;*/
+}
+.tab_td5 {
+    width: 458rpx;
+    color: #C6A056;
+    border-right: 1rpx solid #EEEEEE;
+    text-align: center;
+}
+.tab_td6 {
+    width: 458rpx;
+    color: #C6A056;
+    border-right: 1rpx solid #EEEEEE;
+    border-top: 1rpx solid #EEEEEE;
 }
 .bottom {
     border-bottom: 1rpx solid #EEEEEE;
@@ -163,4 +177,8 @@ page {
     bottom: 0;
     height: 100%;
     background-color: #fff;
+}
+.sb {
+    line-height: 1.2;
+    padding-top: 6rpx;
 }
