--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -60,7 +60,7 @@ page {
     height: 114rpx;
     margin-top: 6rpx;
     /*margin-bottom: 8rpx;*/
-    background-color: #bfa;
+    /* background-color: #bfa; */
 }
 .list {
     display: flex;
