--- a/app.wxss
+++ b/app.wxss
@@ -31,11 +31,11 @@ input{
 }
 @font-face {
   font-family: 'iconfont';  /* project id 810881 */
-  src: url('//at.alicdn.com/t/font_810881_qdwm8iafebo.eot');
-  src: url('//at.alicdn.com/t/font_810881_qdwm8iafebo.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_810881_qdwm8iafebo.woff') format('woff'),
-  url('//at.alicdn.com/t/font_810881_qdwm8iafebo.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_810881_qdwm8iafebo.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_810881_l8d1csytxvi.eot');
+  src: url('//at.alicdn.com/t/font_810881_l8d1csytxvi.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.woff') format('woff'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_810881_l8d1csytxvi.svg#iconfont') format('svg');
 }
 .iconfont {
   font-family: "iconfont" !important;
@@ -46,3 +46,5 @@ input{
 }
 .icon-dianzan:before { content: "\e60c"; }
 .icon-fenxiang:before { content: "\e659"; }
+.icon-guanbi:before { content: "\e624"; }
+
