--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -65,7 +65,7 @@
                 <span class="iconfont icon-fenxiang"></span>
                 <view>分享小程序</view>
             </button>
-            <view class="flex friends-circle" bindtap="btnClick">
+            <view class="flex friends-circle" bindtap="shareFriend">
                 <image class="footer-img3" src="../../images/pageImg/friends-circle.png"></image>
                 <view>朋友圈</view>
             </view>
@@ -74,6 +74,13 @@
     <view wx:if="{{options.IsShare == 1}}" class="go-index" bindtap="goHome">
         <image class="go-index-img" src="../../images/pageImg/home1.png"></image>
         <view>返回主页</view>
+    </view>
+    <view class="showImg" catchtouchstart='' wx:if="{{isShowImg}}">
+        <view wx:if="{{tempFilePath}}" class="iconfont icon-guanbi" bindtap="closeImg"></view>
+        <view class="showImg_wrap">
+            <image class="showImg_img" src="{{tempFilePath}}"></image>
+        </view>
+        <view wx:if="{{tempFilePath}}" class="showImg_save" catchtap="btnClick">保存后分享朋友圈</view>
     </view>
     <view class="canvas-img">
         <canvas canvas-id="canvasShare" style="width: 100%; height: 1206rpx"></canvas>
