--- a/pages/detail/detail.wxss
+++ b/pages/detail/detail.wxss
@@ -182,3 +182,43 @@ page {
     line-height: 1.2;
     padding-top: 6rpx;
 }
+.showImg {
+    z-index: 999;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    bottom: 0;
+   /* height: 100%;*/
+    background-color: #fff;
+}
+.showImg .icon-guanbi {
+    position: absolute;
+    top: 30rpx;
+    font-weight: 900;
+    right: 30rpx;
+    font-size: 30rpx;
+    color: #333;
+}
+.showImg_wrap {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+    margin-top: 50rpx;
+}
+.showImg_img {
+    width: 80%;
+    height: 100%;
+    border-radius: 15rpx;
+}
+.showImg_save {
+    width: 80%;
+    height: 80rpx;
+    line-height: 80rpx;
+    text-align: center;
+    font-size: 30rpx;
+    color: #fff;
+    margin: 40rpx auto 0;
+    background-color: #C6A056;
+    border-radius: 10rpx;
+}
